[package]
name = "peer"
version = "0.1.0"
authors = ["Denis K. <konsistentsi@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
url = "2.1.0"
tungstenite = "0.11.1"
tokio-tungstenite = "*"
tokio = { version = "0.3", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "stream", "time"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
